# wacc.wacc

./: .gitignore  Makefile  README  block  build.sh  gram.sh  index.html  io.wacc.in  lexer.wacc.in  regen-kgt.sh  regen-tp.sh  rt.c  utils.wacc.in  wacc.html  wacc.txt  wacc.wacc.in
.github/workflows/: ci.yaml  docs.yaml
bs2/: README  codegen.hh  lex.cc  lex.hh  lexbuf.hh  main.cc  meson.build  op.cc  op.hh  parser.cc  parser.hh  type.cc  type.hh  util.cc  util.hh
bs2/codegen/x64/: x64.cc  x64.hh
bs2/codegen/xml/: xml.cc  xml.hh
doc/: .gitignore  gendocs.sh  gendocs_template  wacc.texi
gram/: lex.ebnf  parse.ebnf
html_node/: bs2.html  build_002dsystem.html  extensions.html  index.html  input.html  input_002dfile_002dsize.html  lack_002dof_002dchecks.html  lexing.html  limitations.html  overview_002dwacc.html  wacc_002dto_002dc.html
py/: bit_ty.py  bitmask_emu.py  gen.py  gen_alloc.py  gen_enum.py  gen_line_alloc.py  gen_struct.py  gen_trie.py  gen_utils.py  int_emu.py  pairgen.py  test_alloc.py  test_bitmask_emu.py  test_enum.py  test_gen_struct.py  test_int_emu.py  test_pairgen.py  test_trie.py  test_utils.py  test_wtype.py  util.py  wtype.py
py/tool/: linerep.py
src/: io.wacc.in  lexer.wacc.in  parser.wacc.in  string.wacc.in  token.wacc.in  utils.wacc.in  wacc-asm.wacc.in  wacc.wacc.in
test/: _main.go  genExamplesOut.py  go.mod  go.sum  main.go  test  updateExamples.sh
test/asm-pass/: arith.out  arith.s  arith.wacc  arr-idx-lhs.s  arr-idx-lhs.wacc  arr-idx.s  arr-idx.wacc  arr-idx2.s  arr-idx2.wacc  array-char.out  array-char.s  array-char.wacc  (+51 more)
(+310 files in other folders)
